--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 40px;
   font-family: "Courier New", Courier, monospace;
 }
 
